--- a/app/index.html
+++ b/app/index.html
@@ -12,15 +12,91 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <div class="menu-container">
+        <!-- Menu -->
+        <ul class="menu">
+          <li class="menu-apple">
+            <a href="#">
+              <i class="fa fa-apple apple-icon" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="menu-mac">
+            <a href="#">
+              <span>Mac</span>
+            </a>
+          </li>
+          <li class="menu-iPad">
+            <a href="#">
+              <span>iPad</span>
+            </a>
+          </li>
+          <li class="menu-iPhone">
+            <a href="#">
+              <span>iPhone</span>
+            </a>
+          </li>
+          <li class="menu-watch">
+            <a href="#">
+              <span>Watch</span>
+            </a>
+          </li>
+          <li class="menu-tv">
+            <a href="#">
+              <span>TV</span>
+            </a>
+          </li>
+          <li class="menu-support">
+            <a href="#">
+              <span>Support</span>
+            </a>
+          </li>
+          <li class="menu-search">
+            <a href="#">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="menu-store">
+            <a href="#">
+              <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+
+        <!-- Search -->
+        <div class="menu-search-container">
+          <div class="menu-search-input">
+            <form action="">
+              <a href="#">
+                <i class="fa fa-search" aria-hidden="true"></i>
+              </a>
+              <input class="menu-search-input" type="text" aria-label="Search apple.com" placeholder="Search apple.com"
+                autocorrect="off" autocapitalize="off" autocomplete="off" spellcheck="false">
+            </form>
+          </div>
+          <a class="menu-search-close" href="#">
+            <i class="fa fa-close" aria-hidden="true"></i>
+          </a>
+          <div class="search-sub-menu">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="#">Find a store</a></li>
+              <li><a href="#">Accessories</a></li>
+              <li><a href="#">iPod</a></li>
+              <li><a href="#">iOS</a></li>
+              <li><a href="#">Gift Cards</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </nav>
+  </header>
+  <div class="fade-screen"></div>
   <div id="app" class="container">
 
-    <!-- Search Bar message -->
-    <div class="navbar">
-      <div class="is-empty  search">
-        <input type="text" class="form-control col-md-8" placeholder="Search" id="comment" v-model="search">
-      </div>
 
-    </div>
 
 
     <!-- Handler-->
@@ -40,15 +116,15 @@
 
 
 
-        <div class="mcgallery">
+        <div class="container-images">
           <div v-for="item in photos">
-              <h1>iOs{{item.group}}</h1>
-              <vue-images v-for="check in item.photos" v-bind:item="check" v-bind:group="item.group"></vue-images>
+            <h1>iOs{{item.group}}</h1>
+            <vue-images v-for="check in item.photos" v-bind:item="check" v-bind:group="item.group"></vue-images>
 
           </div>
         </div>
 
-   
+
 
       </div>
 
