--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>iOs Wallpapers</title>
+  <title>iOS Wallpapers - By Robert James Gabriel</title>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+
   <header>
     <nav>
       <div class="menu-container">
@@ -93,47 +95,43 @@
       </div>
     </nav>
   </header>
-  <div class="fade-screen"></div>
+
   <div id="app" class="container">
+    <div class="row">
+      <div class="column flexContainer" v-for="item in photos">
 
 
-
-
-    <!-- Handler-->
-    <div class="row padding-top">
-
-
-
-
-
-
-      <div class="col-sm-12" v-if="loading">
-
-        <div class="loadingPacman">
-          <pacman-loader :loading="true" :color="brandColor"></pacman-loader>
-        </div>
-
-
-
-
-        <div class="container-images">
-          <div v-for="item in photos">
-            <h1>iOs{{item.group}}</h1>
-            <vue-images v-for="check in item.photos" v-bind:item="check" v-bind:group="item.group"></vue-images>
-
-          </div>
-        </div>
-
-
+        <h1>iOs{{item.group}}</h1>
+        <vue-images class="item" v-for="check in item.photos" v-bind:item="check" v-bind:group="item.group"></vue-images>
 
       </div>
 
 
 
 
+
+
+
+
+
+
+
+      <div class="loadingPacman">
+        <pacman-loader :loading="true" :color="brandColor"></pacman-loader>
+      </div>
+
+
+
+
+
     </div>
-  </div>
-  <script src="./scripts/popup.min.js" type="text/javascript"></script>
+
+
+
+
+
+
+    <script src="./scripts/popup.min.js" type="text/javascript"></script>
 </body>
 
 </html>
