--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -20,10 +20,9 @@
   <link rel="mask-icon" href="images/extra/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-
+  <link rel="manifest" href="/manifest.json">
   <!---- Css and Styles-->
   <link href="./scripts/bundle.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -34,12 +33,12 @@
           <!-- Menu -->
           <ul class="menu">
             <li class="menu-mac" v-bind:class="{ hidden: isOpen}">
-              <a href="#">
+              <a href="/">
                 <span>iOs Wallpapers</span>
               </a>
             </li>
             <li class="menu-search" v-bind:class="{ floatLeft: isOpen}">
-              <a href="#" v-on:click="open" v-click-outside="outside">
+              <a href="/" v-on:click="open" v-click-outside="outside">
                 <font-awesome-icon icon="search" prefix="fa" />
               </a>
             </li>
@@ -63,22 +62,28 @@
             <div class="search-sub-menu">
               <h3>Quick Links</h3>
               <ul>
-                <li><a href="https://www.robertgabriel.ninja" target="_blank">Made by Robert James Gabriel. Looking for work.</a></li>
-                <li><a href="https://photos.google.com/share/AF1QipNi8VN2pw2Ya_xCV8eFgzEZmiXDy1-GwhXbqFtvXoH3HypF10as9puV8FdoVZpOZA?key=WkZjQTIxQTM5a01oZkNUYTE2ZllKTVJKZk1CMTR3" target="_blank">Check out the Google photos group</a></li>
+                <li><a href="https://www.robertgabriel.ninja" rel="noopener" target="_blank">Made by Robert James
+                    Gabriel. Looking for
+                    work.</a></li>
+                <li><a href="https://github.com/RobertJGabriel/apple-ios-wallpapers" rel="noopener" target="_blank">Add
+                    a new image.</a></li>
+                <li><a href="https://photos.google.com/share/AF1QipNi8VN2pw2Ya_xCV8eFgzEZmiXDy1-GwhXbqFtvXoH3HypF10as9puV8FdoVZpOZA?key=WkZjQTIxQTM5a01oZkNUYTE2ZllKTVJKZk1CMTR3"
+                    rel="noopener" target="_blank">Check out the Google Photos group.</a></li>
+                <li><a href="https://github.com/RobertJGabriel/apple-ios-wallpapers" rel="noopener" target="_blank">View
+                    the source
+                    code here.</a></li>
               </ul>
             </div>
           </div>
-
         </div>
       </nav>
     </header>
     <div class="fade-screen" v-bind:class="{ visible: isOpen}"></div>
-
     <div class="container">
       <div class="row">
         <div>
           <div class="column flexContainer" v-for="( item,index2) in  filteredResults" v-bind:key="index2">
-            <h2 id="#`${item.group}`">{{ item.iOs }}</h2>
+            <h2 v-html="item.iOs "></h2>
             <vue-images class="item" v-for="( check, index)  in item.photos" v-bind:key="check.name" v-bind:item="check"
               v-bind:group="item.group"></vue-images>
           </div>
@@ -87,7 +92,6 @@
     </div>
   </div>
   <script src="./scripts/popup.min.js" type="text/javascript"></script>
-
 </body>
 
 </html>
